--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Figma Land</title>
-    <link rel="shortcut icon" href="img/ico.png" type="image/x-icon">
-	<link rel="stylesheet" href="css/index.css">
+    <title>FigmaLand</title>
+    <link rel="shortcut icon" href="img/figmaland.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header class="header">
@@ -18,9 +18,9 @@
                 <a class ="header__menu-item" href="#">About</a>
                 <a class ="header__menu-item" href="#">Contact</a>
             </div>
-			<div class="header__logo-container">
-				<img class="header__logo" src="img/logo.png" alt="Figma Land">
-			</div>
+            <div class="header__logo-container">
+                <img class="header__logo" src="img/logo.png" alt="Figma Land">
+            </div>
             <div class ="header__social social">
                 <a class ="social-item" href="#"><img class ="social-twitter" src="img/ico-twitter.png" alt="Twitter"></a>
                 <a class ="social-item" href="#"><img class ="social-facebook" src="img/ico-facebook.png" alt="Facebook"></a>
@@ -34,73 +34,70 @@
     <main class="main">
         <section class ="feature">
             <h2 class="feature__title title">Features</h2>
-			<p class="feature__description description">
-				Most calendars are designed for teams. <span>Slate is designed for freelancers</span>
-			</p>
-			<div class="feature__container-small"><video class="feature__video-small" src="video.mp4" controls></video></div>
+            <h2 class="feature__title title">Features</h2>
+            <p class="feature__description description">Most calendars are designed for teams. <span>Slate is designed for freelancers</span></p>
+            <div class="feature__container-small"><video class="feature__video-small" src="video.mp4" controls></video></div>
             <div class="feature__items">
                 <article class="feature__item article">
-				    <img class ="feature__item-figures article-image" src="img/icon-figures.png" alt="figures">
+                    <img class ="feature__item-figures article-image" src="img/icon-figures.png" alt="figures">
                     <h3 class="feature__item-title">OpenType features Variable fonts</h3>
                     <p class="feature__item-description">Slate helps you see how many more days you need to work to reach your financial goal.</p>
                 </article>
                 <article class="feature__item">
-					<img class ="feature__item-pencil article-image" src="img/icon-pencil.png" alt="pencil">
+                    <img class ="feature__item-pencil article-image" src="img/icon-pencil.png" alt="pencil">
                     <h3 class="feature__item-title">Design with real data</h3>
                     <p class="feature__item-description">Slate helps you see how many more days you need to work to reach your financial goal.</p>
                 </article>
                 <article class="feature__item">
-				    <img class ="feature__item-tassel article-image" src="img/icon-tassel.png" alt="tassel">
+                    <img class ="feature__item-tassel article-image" src="img/icon-tassel.png" alt="tassel">
                     <h3 class="feature__item-title">Fastest way to take action</h3>
                     <p class="feature__item-description">Slate helps you see how  many more days you need to work to reach your financial goal.</p>
                 </article>
             </div>
-			<div class="feature__container-main"><video class="feature__video-main" src="video.mp4" controls></video></div>
+            <div class="feature__container-main"><video class="feature__video-main" src="video.mp4" controls></video></div>
         </section>
         <section class="product">
             <div class ="product__info">
-				<h2 class="product__title title">Fastest way to organize</h2>
-				<p class="product__description description">Most calendars are designed for teams. Slate is designed for freelancers</p>
-				<a class="button" href="#">Try For Free</a>
-			</div>
-			<div class="product__image"><img src="img/computer.png" alt="computer"></div>
+                <h2 class="product__title title">Fastest way to organize</h2>
+                <p class="product__description description">Most calendars are designed for teams. Slate is designed for freelancers</p>
+                <a class="button" href="#">Try For Free</a>
+            </div>
+            <div class="product__image"><img src="img/computer.png" alt="computer"></div>
         </section>
         <section class ="newsletter">
-			<p class="newsletter__subtitle">At your fingertips</p>
+            <p class="newsletter__subtitle">At your fingertips</p>
             <h2 class="newsletter__title title">Newsletter</h2>
-			<p class="newsletter__description description">Most calendars are designed for teams. Slate is designed for freelancers</p>
+            <p class="newsletter__description description">Most calendars are designed for teams. Slate is designed for freelancers</p>
             <div class="newsletter__image"><img src="img/man-letter.png" alt="man and letter"></div>
-			<div class="newsletter__block">
-				<p class="newsletter__subtitle-alt">At your fingertips</p>
-				<h2 class="newsletter__title-alt title">Lightning fast prototyping</h2>
-				<form class="newsletter__form" action="/submit" method="POST">
+            <div class="newsletter__block">
+                <p class="newsletter__subtitle-alt">At your fingertips</p>
+                <h2 class="newsletter__title-alt title">Lightning fast prototyping</h2>
+                <form class="newsletter__form" action="/submit" method="POST">
                     <label class="newsletter__form-label" for="email">Subscribe to our Newsletter</label>
                     <p class="newsletter__form-intro">Available exclusivery on Figmaland</p>
                     <div class ="newsletter__form-container">
-                        <input class ="newsletter__form-input" type="email" id="email" name="email" placeholder="Your Email" onfocus="this.placeholder=''" onblur="this.placeholder='Your Email'">
-                        <button class ="newsletter__form-button button" type="submit">Subscribe</button>
+                    <input class ="newsletter__form-input" type="email" id="email" name="email" placeholder="Your Email" onfocus="this.placeholder=''" onblur="this.placeholder='Your Email'">
+                    <button class ="newsletter__form-button button" type="submit">Subscribe</button>
                     </div>
-				</form>
+                </form>
             </div>
+        </section>
+        <section class ="partners">
+            <h2 class="partners__title title">Partners</h2>
+            <p class="partners__description description">Most calendars are designed for teams.<br> Slate is designed for freelancers</p>
+            <ul class="partners__list">
+                <li class="partners__list-logo"><img src="img/logo-google.png" alt="Client Name logo Google"></li>
+                <li class="partners__list-logo"><img src="img/logo-amazon.png" alt="Client Name logo Amazon"></li>
+                <li class="partners__list-logo"><img src="img/logo-microsoft.png" alt="Client Name logo Microsoft"></li>
+                <li class="partners__list-logo"><img src="img/logo-uber.png" alt="Client Name logo Uber"></li>
+                <li class="partners__list-logo"><img src="img/logo-dropbox.png" alt="Client Name logo Dropbox"></li>
+                <li class="partners__list-logo"><img src="img/logo-google.png" alt="Client Name logo Google"></li>
+                <li class="partners__list-logo"><img src="img/logo-uber.png" alt="Client Name logo Uber"></li>
+                <li class="partners__list-logo"><img src="img/logo-amazon.png" alt="Client Name logo Amazon"></li>
+            </ul>
+            <a class="button" href="#">Try For Free</a>
         </section>
 		<!-- 
-        <section class ="logos">
-            <div class ="logos__title">
-                <h3>Partners</h3>
-                <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
-            </div>
-            <ul class="logos__list">
-                <li><img src="img/logo-google.png" alt="Client Name logo Google"></li>
-                <li><img src="img/logo-amazon.png" alt="Client Name logo Amazon"></li>
-                <li><img src="img/logo-microsoft.png" alt="Client Name logo Microsoft"></li>
-                <li><img src="img/logo-uber.png" alt="Client Name logo Uber"></li>
-                <li><img src="img/logo-dropbox.png" alt="Client Name logo Dropbox"></li>
-                <li><img src="img/logo-google.png" alt="Client Name logo Google"></li>
-                <li><img src="img/logo-uber.png" alt="Client Name logo Uber"></li>
-                <li><img src="img/logo-amazon.png" alt="Client Name logo Amazon"></li>
-            </ul>
-            <div class="button"><a href="#">Try For Free</a></div>
-        </section>
         <section class ="section">
             <div class ="section__title">
                 <h3>Testimonials</h3>
