--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <main class="main">
         <section class ="feature">
             <h2 class="feature__title title">Features</h2>
-            <p class="feature__description description">Most calendars are designed for teams. <span>Slate is designed for freelancers</span></p>
+            <p class="feature__description description">
+                Most calendars are designed for teams. <span>Slate is designed for freelancers</span>
+            </p>
             <div class="feature__container-small"><video class="feature__video-small" src="video.mp4" controls></video></div>
             <div class="feature__items">
                 <article class="feature__item article">
@@ -72,12 +74,12 @@
                 <p class="newsletter__subtitle-alt">At your fingertips</p>
                 <h2 class="newsletter__title-alt title">Lightning fast prototyping</h2>
                 <form class="newsletter__form" action="/submit" method="POST">
-                    <label class="newsletter__form-label" for="email">Subscribe to our Newsletter</label>
-                    <p class="newsletter__form-intro">Available exclusivery on Figmaland</p>
-                    <div class ="newsletter__form-container">
+                  <label class="newsletter__form-label" for="email">Subscribe to our Newsletter</label>
+                  <p class="newsletter__form-intro">Available exclusivery on Figmaland</p>
+                  <div class ="newsletter__form-container">
                     <input class ="newsletter__form-input" type="email" id="email" name="email" placeholder="Your Email" onfocus="this.placeholder=''" onblur="this.placeholder='Your Email'">
                     <button class ="newsletter__form-button button" type="submit">Subscribe</button>
-                    </div>
+                  </div>
                 </form>
             </div>
         </section>
@@ -85,18 +87,18 @@
             <h2 class="partners__title title">Partners</h2>
             <p class="partners__description description">Most calendars are designed for teams.<br> Slate is designed for freelancers</p>
             <ul class="partners__list">
-                <li class="partners__list-logo"><img src="img/logo-google.png" alt="Client Name logo Google"></li>
-                <li class="partners__list-logo"><img src="img/logo-amazon.png" alt="Client Name logo Amazon"></li>
-                <li class="partners__list-logo"><img src="img/logo-microsoft.png" alt="Client Name logo Microsoft"></li>
-                <li class="partners__list-logo"><img src="img/logo-uber.png" alt="Client Name logo Uber"></li>
-                <li class="partners__list-logo"><img src="img/logo-dropbox.png" alt="Client Name logo Dropbox"></li>
-                <li class="partners__list-logo"><img src="img/logo-google.png" alt="Client Name logo Google"></li>
-                <li class="partners__list-logo"><img src="img/logo-uber.png" alt="Client Name logo Uber"></li>
-                <li class="partners__list-logo"><img src="img/logo-amazon.png" alt="Client Name logo Amazon"></li>
+                <li class="partners__list-logo"><img src="img/logo-google.png" alt="Client logo Google"></li>
+                <li class="partners__list-logo"><img src="img/logo-amazon.png" alt="Client logo Amazon"></li>
+                <li class="partners__list-logo"><img src="img/logo-microsoft.png" alt="Client logo Microsoft"></li>
+                <li class="partners__list-logo"><img src="img/logo-uber.png" alt="Client logo Uber"></li>
+                <li class="partners__list-logo"><img src="img/logo-dropbox.png" alt="Client logo Dropbox"></li>
+                <li class="partners__list-logo"><img src="img/logo-google.png" alt="Client logo Google"></li>
+                <li class="partners__list-logo"><img src="img/logo-uber.png" alt="Client logo Uber"></li>
+                <li class="partners__list-logo"><img src="img/logo-amazon.png" alt="Client logo Amazon"></li>
             </ul>
             <a class="button" href="#">Try For Free</a>
         </section>
-		<!-- 
+        <!-- 
         <section class ="section">
             <div class ="section__title">
                 <h3>Testimonials</h3>
@@ -199,31 +201,53 @@
                 <h3>Most calendars are designed for teams. Slate is designed for freelancers</h3>
             </div>
         </section>
-		-->
+        -->
     </main>
-	<!--
     <footer class="footer">
-        <div class="footer__colums">
-            <div class="footer__colums colum">
-                <h3 class="footer__colum__title">Pages</h3>
-                <ul class="footer__colum__menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Product</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
+        <div class="footer__container">
+            <div class="footer__columns">
+                <div class="footer__column">
+                    <h3 class="footer__title">Pages</h3>
+                    <div class="footer__menu">
+                        <a class="footer__menu-item" href="#">Home</a>
+                        <a class="footer__menu-item" href="#">Product</a>
+                        <a class="footer__menu-item" href="#">Pricing</a>
+                        <a class="footer__menu-item" href="#">About</a>
+                    </div>
+                </div>
+                <div class="footer__column">
+                    <h3 class="footer__title">Tomothy</h3>
+                    <div class="footer__menu">
+                        <a class="footer__menu-item" href="#">Eleanor Edwards</a>
+                        <a class="footer__menu-item" href="#">Ted Robertson</a>
+                        <a class="footer__menu-item" href="#">Annette Russell</a>
+                        <a class="footer__menu-item" href="#">Jennie Mckinney</a>
+                        <a class="footer__menu-item" href="#">Gloria Richards</a>
+                    </div>
+                </div>
+                <div class="footer__column">
+                    <h3 class="footer__title">Jane Black</h3>
+                    <div class="footer__menu">
+                        <a class="footer__menu-item" href="#">Philip Jones</a>
+                        <a class="footer__menu-item" href="#">Product</a>
+                        <a class="footer__menu-item" href="#">Colleen Russell</a>
+                        <a class="footer__menu-item" href="#">Marvin Hawkins</a>
+                        <a class="footer__menu-item" href="#">Bruce Simmmons</a>
+                    </div>
+                </div>
             </div>
-            <div class="footer__colums colum">
-                <h3 class="footer__colum__title">Tomothy</h3>
-                <ul class="footer__colum__menu">
-                    <li><a href="#">Eleanor Edwards</a></li>
-                    <li><a href="#">Product</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
+            <div class="footer__contacts">
+                <div class ="footer__contacts-items">
+                    <p class ="footer__map"><img class ="footer__map-image" src="img/ico-map.png" alt="ico map"> <span>7480 Mockingbird Hill undefined</span></p>
+                    <p class ="footer__telefon"><img class ="footer__telefon-image" src="img/ico-telefon.png" alt="ico telefon"> <a href="tel:2395550108">(239) 555-0108</a></p>
+                </div>
+                <div class ="footer__social social">
+                    <a class ="social-item" href="#"><img class ="social-twitter" src="img/ico-twitter.png" alt="Twitter"></a>
+                    <a class ="social-item" href="#"><img class ="social-facebook" src="img/ico-facebook.png" alt="Facebook"></a>
+                    <a class ="social-item" href="#"><img class ="social-instagram" src="img/ico-instagram.png" alt="Instagram"></a>
+                </div>
             </div>
         </div>
     </footer>
-	-->
 </body>
 </html>
