--- a/index.html
+++ b/index.html
@@ -6,27 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FigmaLand</title>
     <link rel="shortcut icon" href="img/figmaland.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header class="header">
-        <nav class ="header__nav">
-            <div class ="header__menu">
-                <a class ="header__menu-item" href="#">Home</a>
-                <a class ="header__menu-item" href="#">Product</a>
-                <a class ="header__menu-item" href="#">Pricing</a>
-                <a class ="header__menu-item" href="#">About</a>
-                <a class ="header__menu-item" href="#">Contact</a>
-            </div>
-            <div class="header__logo-container">
-                <img class="header__logo" src="img/logo.png" alt="Figma Land">
-            </div>
-            <div class ="header__social social">
-                <a class ="social-item" href="#"><img class ="social-twitter" src="img/ico-twitter.png" alt="Twitter"></a>
-                <a class ="social-item" href="#"><img class ="social-facebook" src="img/ico-facebook.png" alt="Facebook"></a>
-                <a class ="social-item" href="#"><img class ="social-instagram" src="img/ico-instagram.png" alt="Instagram"></a>
-            </div>
-        </nav>
+		<nav class="navbar navbar-expand-lg">
+			<div class="container header__nav">
+				<div class ="header__social social">
+						<a class ="social-item" href="#"><img class ="social-twitter" src="img/ico-twitter.png" alt="Twitter"></a>
+						<a class ="social-item" href="#"><img class ="social-facebook" src="img/ico-facebook.png" alt="Facebook"></a>
+						<a class ="social-item" href="#"><img class ="social-instagram" src="img/ico-instagram.png" alt="Instagram"></a>
+					</div>
+				<a class="navbar-brand" href="#"><img class="header__logo" src="img/logo.png" alt="Figma Land"></a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				  <div class="navbar-nav ">
+					<a class="nav-link header__menu-item" aria-current="page" href="#">Home</a>
+					<a class="nav-link header__menu-item" href="#">Product</a>
+					<a class="nav-link header__menu-item" href="#">Pricing</a>
+					<a class="nav-link header__menu-item" href="#">About</a>
+					<a class="nav-link header__menu-item" href="#">Contact</a>
+				  </div>
+				</div>
+			</div>
+		</nav>
         <h1 class="header__title">The best products start with Figma</h1>
         <p class="header__description">Most calendars are designed for teams. <span>Slate is designed for freelancers</span></p>
         <a class="button" href="#">Try For Free</a> 
@@ -34,53 +40,53 @@
     <main class="main">
         <section class ="feature">
             <h2 class="feature__title title">Features</h2>
-            <p class="feature__description description">
-                Most calendars are designed for teams. <span>Slate is designed for freelancers</span>
-            </p>
-            <div class="feature__container-small"><video class="feature__video-small" src="video.mp4" controls></video></div>
+			<p class="feature__description description">
+				Most calendars are designed for teams. <span>Slate is designed for freelancers</span>
+			</p>
+			<div class="feature__container-small"><video class="feature__video-small" src="video.mp4" controls></video></div>
             <div class="feature__items">
                 <article class="feature__item article">
-                    <img class ="feature__item-figures article-image" src="img/icon-figures.png" alt="figures">
+				    <img class ="feature__item-figures article-image" src="img/icon-figures.png" alt="figures">
                     <h3 class="feature__item-title">OpenType features Variable fonts</h3>
                     <p class="feature__item-description">Slate helps you see how many more days you need to work to reach your financial goal.</p>
                 </article>
                 <article class="feature__item">
-                    <img class ="feature__item-pencil article-image" src="img/icon-pencil.png" alt="pencil">
+					<img class ="feature__item-pencil article-image" src="img/icon-pencil.png" alt="pencil">
                     <h3 class="feature__item-title">Design with real data</h3>
                     <p class="feature__item-description">Slate helps you see how many more days you need to work to reach your financial goal.</p>
                 </article>
                 <article class="feature__item">
-                    <img class ="feature__item-tassel article-image" src="img/icon-tassel.png" alt="tassel">
+				    <img class ="feature__item-tassel article-image" src="img/icon-tassel.png" alt="tassel">
                     <h3 class="feature__item-title">Fastest way to take action</h3>
                     <p class="feature__item-description">Slate helps you see how  many more days you need to work to reach your financial goal.</p>
                 </article>
             </div>
-            <div class="feature__container-main"><video class="feature__video-main" src="video.mp4" controls></video></div>
+			<div class="feature__container-main"><video class="feature__video-main" src="video.mp4" controls></video></div>
         </section>
         <section class="product">
             <div class ="product__info">
-                <h2 class="product__title title">Fastest way to organize</h2>
-                <p class="product__description description">Most calendars are designed for teams. Slate is designed for freelancers</p>
-                <a class="button" href="#">Try For Free</a>
-            </div>
-            <div class="product__image"><img src="img/computer.png" alt="computer"></div>
+				<h2 class="product__title title">Fastest way to organize</h2>
+				<p class="product__description description">Most calendars are designed for teams. Slate is designed for freelancers</p>
+				<a class="button" href="#">Try For Free</a>
+			</div>
+			<div class="product__image"><img src="img/computer.png" alt="computer"></div>
         </section>
         <section class ="newsletter">
-            <p class="newsletter__subtitle">At your fingertips</p>
+			<p class="newsletter__subtitle">At your fingertips</p>
             <h2 class="newsletter__title title">Newsletter</h2>
-            <p class="newsletter__description description">Most calendars are designed for teams. Slate is designed for freelancers</p>
+			<p class="newsletter__description description">Most calendars are designed for teams. Slate is designed for freelancers</p>
             <div class="newsletter__image"><img src="img/man-letter.png" alt="man and letter"></div>
-            <div class="newsletter__block">
-                <p class="newsletter__subtitle-alt">At your fingertips</p>
-                <h2 class="newsletter__title-alt title">Lightning fast prototyping</h2>
-                <form class="newsletter__form" action="/submit" method="POST">
-                  <label class="newsletter__form-label" for="email">Subscribe to our Newsletter</label>
-                  <p class="newsletter__form-intro">Available exclusivery on Figmaland</p>
-                  <div class ="newsletter__form-container">
+			<div class="newsletter__block">
+				<p class="newsletter__subtitle-alt">At your fingertips</p>
+				<h2 class="newsletter__title-alt title">Lightning fast prototyping</h2>
+				<form class="newsletter__form" action="/submit" method="POST">
+				  <label class="newsletter__form-label" for="email">Subscribe to our Newsletter</label>
+				  <p class="newsletter__form-intro">Available exclusivery on Figmaland</p>
+				  <div class ="newsletter__form-container">
                     <input class ="newsletter__form-input" type="email" id="email" name="email" placeholder="Your Email" onfocus="this.placeholder=''" onblur="this.placeholder='Your Email'">
                     <button class ="newsletter__form-button button" type="submit">Subscribe</button>
-                  </div>
-                </form>
+				  </div>
+				</form>
             </div>
         </section>
         <section class ="partners">
@@ -98,7 +104,7 @@
             </ul>
             <a class="button" href="#">Try For Free</a>
         </section>
-        <!-- 
+		<!-- 
         <section class ="section">
             <div class ="section__title">
                 <h3>Testimonials</h3>
@@ -201,53 +207,54 @@
                 <h3>Most calendars are designed for teams. Slate is designed for freelancers</h3>
             </div>
         </section>
-        -->
+		-->
     </main>
-    <footer class="footer">
-        <div class="footer__container">
-            <div class="footer__columns">
-                <div class="footer__column">
-                    <h3 class="footer__title">Pages</h3>
-                    <div class="footer__menu">
-                        <a class="footer__menu-item" href="#">Home</a>
-                        <a class="footer__menu-item" href="#">Product</a>
-                        <a class="footer__menu-item" href="#">Pricing</a>
-                        <a class="footer__menu-item" href="#">About</a>
-                    </div>
-                </div>
-                <div class="footer__column">
-                    <h3 class="footer__title">Tomothy</h3>
-                    <div class="footer__menu">
-                        <a class="footer__menu-item" href="#">Eleanor Edwards</a>
-                        <a class="footer__menu-item" href="#">Ted Robertson</a>
-                        <a class="footer__menu-item" href="#">Annette Russell</a>
-                        <a class="footer__menu-item" href="#">Jennie Mckinney</a>
-                        <a class="footer__menu-item" href="#">Gloria Richards</a>
-                    </div>
-                </div>
-                <div class="footer__column">
-                    <h3 class="footer__title">Jane Black</h3>
-                    <div class="footer__menu">
-                        <a class="footer__menu-item" href="#">Philip Jones</a>
-                        <a class="footer__menu-item" href="#">Product</a>
-                        <a class="footer__menu-item" href="#">Colleen Russell</a>
-                        <a class="footer__menu-item" href="#">Marvin Hawkins</a>
-                        <a class="footer__menu-item" href="#">Bruce Simmmons</a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer__contacts">
-                <div class ="footer__contacts-items">
-                    <p class ="footer__map"><img class ="footer__map-image" src="img/ico-map.png" alt="ico map"> <span>7480 Mockingbird Hill undefined</span></p>
-                    <p class ="footer__telefon"><img class ="footer__telefon-image" src="img/ico-telefon.png" alt="ico telefon"> <a href="tel:2395550108">(239) 555-0108</a></p>
-                </div>
-                <div class ="footer__social social">
-                    <a class ="social-item" href="#"><img class ="social-twitter" src="img/ico-twitter.png" alt="Twitter"></a>
-                    <a class ="social-item" href="#"><img class ="social-facebook" src="img/ico-facebook.png" alt="Facebook"></a>
-                    <a class ="social-item" href="#"><img class ="social-instagram" src="img/ico-instagram.png" alt="Instagram"></a>
-                </div>
-            </div>
-        </div>
-    </footer>
+	<footer class="footer">
+		<div class="footer__container">
+			<div class="footer__columns">
+				<div class="footer__column">
+					<h3 class="footer__title">Pages</h3>
+					<div class="footer__menu">
+						<a class="footer__menu-item" href="#">Home</a>
+						<a class="footer__menu-item" href="#">Product</a>
+						<a class="footer__menu-item" href="#">Pricing</a>
+						<a class="footer__menu-item" href="#">About</a>
+					</div>
+				</div>
+				<div class="footer__column">
+					<h3 class="footer__title">Tomothy</h3>
+					<div class="footer__menu">
+						<a class="footer__menu-item" href="#">Eleanor Edwards</a>
+						<a class="footer__menu-item" href="#">Ted Robertson</a>
+						<a class="footer__menu-item" href="#">Annette Russell</a>
+						<a class="footer__menu-item" href="#">Jennie Mckinney</a>
+						<a class="footer__menu-item" href="#">Gloria Richards</a>
+					</div>
+				</div>
+				<div class="footer__column">
+					<h3 class="footer__title">Jane Black</h3>
+					<div class="footer__menu">
+						<a class="footer__menu-item" href="#">Philip Jones</a>
+						<a class="footer__menu-item" href="#">Product</a>
+						<a class="footer__menu-item" href="#">Colleen Russell</a>
+						<a class="footer__menu-item" href="#">Marvin Hawkins</a>
+						<a class="footer__menu-item" href="#">Bruce Simmmons</a>
+					</div>
+				</div>
+			</div>
+			<div class="footer__contacts">
+				<div class ="footer__contacts-items">
+					<p class ="footer__map"><img class ="footer__map-image" src="img/ico-map.png" alt="ico map"> <span>7480 Mockingbird Hill undefined</span></p>
+					<p class ="footer__telefon"><img class ="footer__telefon-image" src="img/ico-telefon.png" alt="ico telefon"> <a href="tel:2395550108">(239) 555-0108</a></p>
+				</div>
+				<div class ="footer__social social">
+					<a class ="social-item" href="#"><img class ="social-twitter" src="img/ico-twitter.png" alt="Twitter"></a>
+					<a class ="social-item" href="#"><img class ="social-facebook" src="img/ico-facebook.png" alt="Facebook"></a>
+					<a class ="social-item" href="#"><img class ="social-instagram" src="img/ico-instagram.png" alt="Instagram"></a>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
